no need to add \ before apostrophee

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -178,7 +178,7 @@ nav.navbar.navbar-default.navbar-fixed-top
             .row
               .col-md-12
                 h5.text-center
-                  | Merci de nous porter un tel intérêt ! </br>Malheureusement, notre service n\'est pas encore disponible. </br>Nous vous recontacterons dès qu\'il le sera :)'
+                  | Merci de nous porter un tel intérêt ! </br>Malheureusement, notre service n'est pas encore disponible. </br>Nous vous recontacterons dès qu'il le sera :)
 #home.container-fluid
   .container
     h1 Une journée à la maison ?
