--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -193,19 +193,19 @@ nav.navbar.navbar-default.navbar-fixed-top
     br
     .col-lg-4
       h2
-      img(src='./imgs/commande.png', alt='commande', style='width:20%;')
+      img(src='/static/imgs/commande.png', alt='commande', style='width:20%;')
       |  Commande
       p
         | Votre voisin souhaite commander un article sur un site de e-commerce partenaire, mais il n'est pas disponible pour réceptionner ce colis. Heureusement, vous l'êtes ! Il va donc choisir le mode de livraison "Relayers" et vous sélectionner pour que son colis soit livré directement chez vous !
     .col-lg-4
       h2
-        img(src='./imgs/reception.png', alt='reception', style='width:20%;')
+        img(src='/static/imgs/reception.png', alt='reception', style='width:20%;')
         |  Réception
       p
         | Vous réceptionnez le colis de votre voisin, et le gardez précieusement chez vous jusqu'à que votre voisin vienne le chercher.
     .col-lg-4
       h2
-        img(src='./imgs/remuneration.png', alt='remuneration', style='width:20%;')
+        img(src='/static/imgs/remuneration.png', alt='remuneration', style='width:20%;')
         |  Rémunération
       p
         | En plus de rendre service à votre voisin, vous êtes rémunéré pour le service rendu !
