added facebook pixel

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -17,6 +17,7 @@ head
   link(rel='stylesheet', href='/static/css/social_icons.css')
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
   script(type='text/javascript', src='/static/javascript/google_localisation_inscription.js')
+  script(type='text/javascript', src='/static/javascript/facebook-ads.js')
 
 nav.navbar.navbar-default.navbar-fixed-top
   .container
