--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -171,6 +171,10 @@ nav.navbar.navbar-default.navbar-fixed-top
               .col-md-12
                 h5.text-center
                   | Merci de nous porter un tel intérêt ! </br>Malheureusement, notre service n'est pas encore disponible. </br>Nous vous recontacterons dès qu'il le sera :)
+                  script.
+                    fbq('track', 'CompleteRegistration');
+
+
 #home.container-fluid
   .container
     h1 Une journée à la maison ?
