--- a/frontend/public/css/profile.css
+++ b/frontend/public/css/profile.css
@@ -37,6 +37,13 @@ body {
 }
 
 
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
 /****** Responsiveness ******/
 
 /* Big screens */
