--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -208,25 +208,24 @@ nav.navbar.navbar-default.navbar-fixed-top
   hr
   br
   .row
-    h1 Concrètement
-    .col-lg-4
-      h2
+  h1 Concrètement
+  .col-lg-4
+    h2
       img(src='/static/imgs/commande.png', alt='commande', style='width:20%;')
       |  Commande
-      p
-        | Votre voisin souhaite commander un article sur un site de e-commerce partenaire, mais il n'est pas disponible pour réceptionner ce colis. Heureusement, vous l'êtes ! Il va donc choisir le mode de livraison "Relayers" et vous sélectionner pour que son colis soit livré directement chez vous !
-    .col-lg-4
-      h2
-        img(src='/static/imgs/reception.png', alt='reception', style='width:20%;')
-        |  Réception
-      p
-        | Vous réceptionnez le colis de votre voisin, et le gardez précieusement chez vous jusqu'à ce que votre voisin vienne le chercher.
-    .col-lg-4
-      h2
-        img(src='/static/imgs/remuneration.png', alt='remuneration', style='width:20%;')
-        |  Rémunération
-      p
-        | En plus de rendre service à votre voisin, vous êtes rémunéré 2€
+    p
+      | Votre voisin souhaite commander un article sur un site de e-commerce partenaire, mais il n'est pas disponible pour réceptionner ce colis. Heureusement, vous l'êtes ! Il va donc choisir le mode de livraison "Relayers" et vous sélectionner pour que son colis soit livré directement chez vous !
+  .col-lg-4
+    h2
+      img(src='/static/imgs/reception.png', alt='reception', style='width:20%;')
+      |  Réception
+    p
+      | Vous réceptionnez le colis de votre voisin, et le gardez précieusement chez vous jusqu'à ce que votre voisin vienne le chercher.
+  .col-lg-4
+    h2
+      img(src='/static/imgs/remuneration.png', alt='remuneration', style='width:20%;')
+      |  Rémunération
+    p En plus de rendre service à votre voisin, vous êtes rémunéré 2€ !
 
 #contact.container-fluid
   .row
