--- a/frontend/views/profile.pug
+++ b/frontend/views/profile.pug
@@ -11,6 +11,16 @@ head
   link(rel='stylesheet', href='/static/codebase/dhtmlxscheduler.css')
   script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
   script(type='text/javascript', src='/static/codebase/dhtmlxscheduler.js')
+  script(type='text/javascript', charset='utf-8').
+  function init() {
+  scheduler.init('scheduler_here',new Date(2017,4,10),"month");
+  scheduler.templates.xml_date = function(value){ return new Date(value); };
+  scheduler.load("/cal", "json");
+  scheduler.config.xml_date="%Y-%m-%d %H:%i";
+  var dp = new dataProcessor("/cal");
+  dp.init(scheduler);
+  dp.setTransactionMode("POST", false);
+  }
 body(onload="init()")
   nav.navbar.navbar-default.navbar-fixed-top
     .container
@@ -34,16 +44,6 @@ body(onload="init()")
               a(href='/profile')   Mon profil
               form.form(action='/logout', method='POST', accept-charset='UTF-8')
                 button(type='submit') Déconnexion
-  script(type='text/javascript', charset='utf-8').
-    function init() {
-    scheduler.init('scheduler_here',new Date(2017,4,10),"month");
-    scheduler.templates.xml_date = function(value){ return new Date(value); };
-    scheduler.load("/cal", "json");
-    scheduler.config.xml_date="%Y-%m-%d %H:%i";
-    var dp = new dataProcessor("/cal");
-    dp.init(scheduler);
-    dp.setTransactionMode("POST", false);
-    }
   #scheduler_here.dhx_cal_container.well.center-block(style='width:50%; height:50%; margin-top:100px;')
     .dhx_cal_navline
       .dhx_cal_prev_button  
@@ -56,7 +56,7 @@ body(onload="init()")
     .dhx_cal_header
     .dhx_cal_data
   footer.footer
-    p.text-muted.text-center(style='padding:5px') @ Relayers 2017 - Tous droits réservés - Mentions légales - CGU
+    p.text-muted @ Relayers 2017 - Tous droits réservés - Mentions légales - CGU
   //
     Bootstrap core JavaScript
     ==================================================
