--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -179,7 +179,7 @@ nav.navbar.navbar-default.navbar-fixed-top
 #home.container-fluid
   .container
     h1 Une journée à la maison ?
-    h2 Réceptionnez des colis pour vos voisins et soyez rémunéré pour ce service !
+    h2 Réceptionnez des colis pour vos voisins et soyez rémunérés pour ce service !
     button.btn.btn-default.btn-lg(type='button', data-toggle='modal', data-target='#registerModal') Devenir Relayer
 #about.container-fluid
   .row
