--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -187,7 +187,7 @@ nav.navbar.navbar-default.navbar-fixed-top
   br
   .col-lg-3
     h2
-      img(src='/static/imgs/inscription.gif', alt='inscription', style='width:20%;')
+      img(src='/static/imgs/inscription.png', alt='inscription', style='width:20%;')
       br
       | Je m'inscris sur la plateforme
   .col-lg-3
