added pug modifications

--- a/frontend/views/index.pug
+++ b/frontend/views/index.pug
@@ -213,7 +213,7 @@ nav.navbar.navbar-default.navbar-fixed-top
       br
       br
       | Je suis rémunéré pour ce service rendu
-  .row
+  .row.wow.bounceInUp(data-wow-duration='1s', data-wow-delay='0.4s')
   hr
   br
   h1 Concrètement
